deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq-peter-python-app-service
  namespace: mq-peter-python-app-namespace
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: mq-peter-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
